--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,7 @@ services:
     name: discord-bot-flask
     env: python
     plan: free
-    region: oregon
+    region: ohio
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: python your_bot_file.py
-    envVars:
-      - key: BOT_TOKEN
-        fromSecret: BOT_TOKEN_SECRET
+    startCommand: python AC_MOD_Detector1.1.py
